[gd_scene load_steps=2 format=3 uid="uid://tm8c3e1mkgqx"]

[ext_resource type="Script" uid="uid://ky0cdbchgtry" path="res://Entities/PuzzleGrid/PuzzleGrid.gd" id="1_0ewny"]

[node name="PuzzleGrid" type="Area2D"]
z_index = -1
position = Vector2(314, 161)
scale = Vector2(0.6, 0.6)
script = ExtResource("1_0ewny")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
